# text_utils

./: pyproject.toml
src/text_utils/: __init__.py
