[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-utils-ronnie"
version = "0.1.0"
description = "Biblioteca para manipulação de texto"
readme = "README.md"
authors = [
    {name = "Ricardo Laranjeira", email = "rc_laranjeira@hotmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = []

[project.urls]
"Homepage" = "https://github.com/ricardo-laranjeira/text_utils"
